--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@libp2p/kad-dht": "^12.0.14",
     "@libp2p/mdns": "^10.0.21",
     "@libp2p/mplex": "^10.0.21",
+    "@libp2p/noise": "^12.0.1",
     "@libp2p/tcp": "^9.0.23",
     "@libp2p/websockets": "^8.0.21",
     "@multiformats/multiaddr": "^12.2.1",
