--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/sudiptab2100/libp2p-pubsub#readme",
   "dependencies": {
+    "@chainsafe/libp2p-gossipsub": "^13.0.0",
     "@chainsafe/libp2p-noise": "^15.0.0",
     "@libp2p/bootstrap": "^10.0.21",
+    "@libp2p/dcutr": "^1.0.18",
     "@libp2p/identify": "^1.0.20",
     "@libp2p/kad-dht": "^12.0.14",
     "@libp2p/mdns": "^10.0.21",
