--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "@chainsafe/libp2p-gossipsub": "^13.0.0",
     "@chainsafe/libp2p-noise": "^15.0.0",
+    "@chainsafe/libp2p-yamux": "^6.0.2",
+    "@libp2p/autonat": "^1.0.18",
     "@libp2p/bootstrap": "^10.0.21",
     "@libp2p/dcutr": "^1.0.18",
     "@libp2p/identify": "^1.0.20",
